@@ -1273,7 +1273,7 @@ SUB gendata ()
    IF state.pt = 0 THEN EXIT DO
    IF state.pt = 3 THEN
     DIM bittemp(2) AS INTEGER
-    DIM bitname(23) AS STRING
+    DIM bitname(24) AS STRING
     bitname(0) = "Pause on Battle Sub-menus"
     bitname(1) = "Enable Caterpillar Party"
     bitname(2) = "Don't Restore HP on Levelup"
@@ -1298,6 +1298,7 @@ SUB gendata ()
     bitname(21) = "Attack captions pause battle meters"
     bitname(22) = "Don't randomize battle ready meters"
     bitname(23) = "Battle menus wait for attack animations"
+    bitname(24) = "Enable better scancodes for scripts"
     bittemp(0) = gen(genBits)
     bittemp(1) = gen(genBits2)
     bittemp(2) = gen(genBits2+1)
