@@ -36,6 +36,10 @@ WHAT IS NEW?
       "mouse region" support [Jay]
     * When using an item in the item menu, there is now visual feedback
       when you use the last item in a stack. [James]
+    * Lots of new scancodes added for scripts: you can now, for example,
+      tell apart Numpad 2 and the Down key. You have to turn on the
+      general bitset "Enable better scancodes" for these to fully work,
+      see "key is pressed" in the dictionary for more details. [Ralph]
 
   * Bugfixes
     * Bug 749:  Attacks configured to do No Damage still do damage when
